--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "rustinsight"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2021"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
-description = "The launcher app for Rust Insight! interacive book and multi-tool"
+description = "The launcher app for the interacive book"
 repository = "https://github.com/rustinsight/lab"
 homepage = "https://rustinsight.com"
 license = "GPL-3.0"
